--- a/_posts/2023-08-14-Fluids.md
+++ b/_posts/2023-08-14-Fluids.md
@@ -10,6 +10,17 @@ categories: engg
 * This will become a table of contents (this text will be scrapped).
 {:toc}
 
+This is part 1 of a series of posts on the Navier Stokes Millennium Prize Problem in which I endeavour to express the problem statement in my own words (IMOW) with some help from ChatGPT.
+
+Here is the list of all the posts in this series:
+
+- IMOW: The Navier Stokes Millennium Prize Problem - Statement (this post)
+- [IMOW: The Navier Stokes Millennium Prize Problem - Main Partial Results]({% post_url 2023-09-07-Fluids-Finite %})
+- [IMOW: The Navier Stokes Millennium Prize Problem - Weak Solutions]({% post_url 2023-12-07-Fluids-Weak-Solutions %})
+
+
+See [references](#references) for links to the original problem statement.
+
 ## Introduction
 
 The problem is concerned with solutions for the Navier Stokes equations in $\mathbb{R}_3$ for a viscous incompressible fluid. 
@@ -28,7 +39,7 @@ with initial conditions
 <p markdown=1 id ='eqn3'>$$u(x, 0) = u^\circ(x) \quad (x \in \mathbb{R}^n)  \quad (3)$$</p>
 
 - <a href="#eqn1" markdown=1>Equation 1</a>: Newton's 2nd law for a fluid element subject to the following forces
-    - External force $f = \sum_i f_i(x, t)\mathbf{e}_i$ e.g. gravity where $f = -g\mathbf{e}_z$
+    - External force per unit mass $f = \sum_i f_i(x, t)\mathbf{e}_i$ e.g. gravity where $f = -g\mathbf{e}_z$
     - Pressure forces
     - Friction forces, <span class='chatgpt' markdown=1>due to viscosity. Viscosity is the measure of a fluid's resistance to flow. It describes the internal friction of a moving fluid, where a higher viscosity implies a greater resistance to fluid deformation.</span>
 - <a href="#eqn2" markdown=1>Equation 2</a>: conservation of mass for an incompressible fluid. 
@@ -37,6 +48,8 @@ with initial conditions
 <span class='chatgpt' markdown=1>In this context, $C^\infty$ refers to a differentiable function whose derivatives of all orders exist and are continuous. $C^\infty$ is also often referred to as a smooth function.</span>
 
 The Euler equations are the NS-equations $(1), (2), (3)$ for an inviscid fluid i.e. $\mu = 0 \implies \nu = 0$. 
+
+**NOTE:** The pressure gradient term in <a href="#eqn1" markdown=1>1</a> is usually written as $\frac{1}{\rho}\frac{\partial p}{\partial x_i}$. This allows for a potentially non-constant density. However the form used above would be consistent with a constant density $\rho$ if $p$ is interpreted as pressure per unit density. I am a bit confused as I have not seen pressure written this way before. However it does not seem to be a typo as there is no mention of the equation in the errata.
 
 ## Physical reasonableness
 
@@ -72,7 +85,8 @@ Moreover the kinetic energy must be bounded for all time
 ## Existence (Statement A of the paper)
 Let $u^\circ(x)$ be an initial velocity vector that satisfies [(4)](#eqn4).
 
-The task is to prove that there exists a velocity function $u(x, t)$ and a pressure function $p(x, t)$ which solve the Navier Stokes equations [(1)](#eqn1), [(2)](#eqn2), [(3)](#eqn3) and satisfy [(6)](#eqn6), [(7)](#eqn7)
+The task is to prove that for any such $u^\circ(x)$,
+there exists a velocity function $u(x, t)$ and a pressure function $p(x, t)$ which solve the Navier Stokes equations [(1)](#eqn1), [(2)](#eqn2), [(3)](#eqn3) and satisfy [(6)](#eqn6), [(7)](#eqn7)
 
 For the purposes of this task it is assumed that there are no external forces acting on the fluid, $f(x, t) = 0$. 
 
@@ -98,7 +112,6 @@ $$u^\circ\left(x + e_j\right) = u^\circ(x), \quad
 
 <span class='chatgpt' markdown=1>
 where  $e_j$ represents the unit vector in the direction of the $j$-th dimension. In other words, $e_j$ is a vector in $\mathbb{R}^n$ that has a magnitude (or length) of 1 and points in direction $j$.</span>
-
 
 <span class='chatgpt' markdown=1>
 The equations simply express that the initial velocity $u^\circ$ and the external force $f$ must be the same when you move a unit step $e_j$ in any spatial direction. This means that both $u^\circ$ and $f$ are repeating after each unit step in space, hence they are periodic in all spatial dimensions.
