--- a/_posts/2023-04-13-2-qubit.md
+++ b/_posts/2023-04-13-2-qubit.md
@@ -144,6 +144,7 @@ CV = [CU(0, 1), CNOT(1, 2), CU(0, 2),
 <p class='p-img' markdown=1>
 ![Circuit for 2-qubit controlled-V]({{site.baseurl}}/assets/CV-2qubit.png)
 </p>
+
 Sadly the grader kept failing for this circuit as well i.e. returning the same error as before and not responding with correct or incorrect.
 
 However we can verify that the circuit is indeed equivalent to controlled-V. When qubit 0 is 1, the gates controlled by qubit 0 are applied so that qubits 1 and 2 are transformed as 
@@ -161,10 +162,18 @@ and when qubit 0 is 0, only the gates not controlled by qubit 0 are applied so q
 
 Since the circuit applies V when qubit 0 is 1 and identity when qubit 0 is 0, it satisfies the definition of controlled-V. 
 
-To use this for trace estimation you simply need to apply a Hadamard transform to qubit 0 at the input and output.
+A notebook that verifies the circuit for controlled-V using matrices can be found [here](https://colab.research.google.com/drive/1Tn7j8gH_PReIkDUIL6byJjkzun0mcXU4?usp=sharing).
 
-A notebook that verifies the circuit using matrices can be found [here](https://colab.research.google.com/drive/1Tn7j8gH_PReIkDUIL6byJjkzun0mcXU4?usp=sharing).
+To use this for trace estimation you simply need to apply a Hadamard transform to qubit 0 at the input and output as follows
 
+```
+[H(0), CU(0, 1), CNOT(1, 2), CU(0, 2), 
+      CH(0, 1), CH(0, 2), CNOT(1, 2), CH(0, 2), CH(0, 1), H(0)]
+```
+
+<p class='p-img' markdown=1>
+![Circuit for 2-qubit controlled-V]({{site.baseurl}}/assets/full-trace-V-circuit.png)
+</p>
 ## Alternate Controlled-$H$ Construction
 
 You can construct `CH` using a combination of a `CNOT` and rotations since
@@ -180,5 +189,6 @@ You can construct the circuit as
 <p class='p-img' markdown=1>
 ![Controlled-Hadamard using CNOT and rotation]({{site.baseurl}}/assets/CH-rotation.png)
 </p>
+
 When qubit 0 is 1, the output is $R_Y\left(-\frac{\pi}{4}\right) \cdot X \cdot R_Y\left(\frac{\pi}{4}\right) = H$ and when qubit 0 is 0, the output is $R_Y\left(-\frac{\pi}{4}\right) \cdot R_Y\left(\frac{\pi}{4}\right) = I$, as required.
 
