--- a/_posts/2023-04-13-2-qubit.md
+++ b/_posts/2023-04-13-2-qubit.md
@@ -192,3 +192,25 @@ You can construct the circuit as
 
 When qubit 0 is 1, the output is $R_Y\left(-\frac{\pi}{4}\right) \cdot X \cdot R_Y\left(\frac{\pi}{4}\right) = H$ and when qubit 0 is 0, the output is $R_Y\left(-\frac{\pi}{4}\right) \cdot R_Y\left(\frac{\pi}{4}\right) = I$, as required.
 
+## Additional notes
+
+Just for fun I have been thinking about how the circuit above could be generalised. Here I will note down my ideas as I think of them.
+
+### Sequence of 2-qubit qubit 0 controlled gates between Toffoli gates
+You can implement any arbitrary sequence of 2-qubit gates $CU_1, \cdots, CU_n$, all controlled by qubit 0, sandwiched between a pair of Toffoli gates with the second control and the target swapped between the two and the Toffoli gates entirely using 2-qubit gates by replacing the Toffoli gates using two CNOT gates where the swapping of the order of control and target in one of the gates is controlled by `CH` gates as above i.e. 
+
+```
+[Toffoli(0, 1, 2), CU_1(0, idx_1),...,CU_n(0, idx_n), Toffoli(0, 2, 1)]
+-> [CNOT(1, 2), CU_1(0, idx_1),...,CU_n(0, idx_n), CH(0, 1), CH(0, 2), CNOT(1, 2), CH(0, 2), CH(0, 1)]
+```
+
+where `idx_i in [1, 2]`.
+
+It works because:
+- When qubit 0 has the value of 1 in the original configuration, the first Toffoli will function as a CNOT on qubits 1 and 2, the intermediate gates will function as $U_1, \cdots, U_n$, and the second Toffoli gate will also function as a CNOT on qubits 1 and 2 but with control and target flipped; which is exactly what happens in the modified circuit:
+
+```[CNOT(1, 2), U_1(0, idx_1),...,U_n(0, idx_n), CNOT(2, 1)]```
+
+- When qubit 0 has the value of 0, in the original configuration none of the gates will function so the input will be unchanged whilst in the modified circuit the intermediate controlled gates will not function so the circuit will consist of two CNOT gates where the second CNOT gate will not have its control and target flipped and thus it will be identical to the first CNOT gate, inverting it and leading to an overall identity transform:
+
+```[CNOT(1, 2), CNOT(1, 2)] = identity```
