--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -604,3 +604,7 @@ The app also has debugging functionality that is designed to address the challen
 - Finetune original model (to avoid overfitting) on augmented dataset and then use this model to generate rationales once again (using all the datapoints this from the initial dataset).
 
 ### Rationalization
+
+## 51. Rosetta Neurons: Mining the Common Units in a Model Zoo ([link](https://www.arxiv.org/abs/2306.09346))
+
+Rosetta neurons are activations i.e. the outputs of some layer of a neural network that represent similar concepts across different models. Like intermediate features? The concepts can be semantic or non-semantic. Notably Rosetta neurons enable the matching of concepts between generative and discriminative models. Since models tend to be overparameterised, you can also match concepts within a model. 
